--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("globe.jpg");
+    background-image: url("../globe.jpg");
     background-color: blueviolet;
     background-position: center;
     background-repeat: no-repeat;
