--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     background-repeat: no-repeat;
     font-family: Arial Rounded MT, Helvetica, sans-serif;
     color: white;
-    background-size:cover;
+    background-size:100vw 145vh;
     margin: 0%;
     text-transform: uppercase;
 }
@@ -26,7 +26,7 @@ body{
     align-items: center;
     width: 600px;
     font-size: 13px;
-    font-weight: 600;
+    font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
     text-transform: capitalize;
 }
@@ -38,6 +38,10 @@ ul{
 }
 li{
     display: inline-block;
+}
+
+li:first-child{
+    color: rgb(210, 166, 251);
 }
 
 .title span{
@@ -59,9 +63,18 @@ li{
 .btn-1{
     background-color:transparent;
 }
+.btn-1:hover{
+    background-color: #ffffff1b;
+    
+    box-shadow: 2px 2px 3px #ffffff;
+}
 .btn-2{
-    background-color: rgb(5, 218, 255);
+    background-color: rgb(190, 25, 212);
     border: none;
+}
+.btn-2:hover{
+    background-color: #dd00ff;
+    box-shadow: 5px 5px 5px #9f2db0;
 }
 .content{
     text-align: center;
@@ -93,10 +106,14 @@ li{
     color: white;
     text-transform: uppercase;
     font-size: 0.9vw;
-    background-color:#3cd2f3;
+    background-color:#b524cc;
     border: none;
     border-radius: 2px;
     font-weight: bold;
+}
+.btn-3:hover{
+    background-color: #dd00ff;
+    box-shadow: 5px 5px 5px #9f2db0;
 }
 .rates{
     text-transform: none;
